turtleart.lessons.turtleart.Main.Flower3.scala.error
Source:16: error: not found: value droiet
	droiet(90)
        ^