turtleart.lessons.turtleart.Main.Flower3.scala.code
override def run():Unit= {
def motif(){
	gauche(45)
	avance(20)
	droite(45)
	avance(20)
	gauche(45)
	avance(20)
	gauche(90)
	avance(20)
	droite(90)
	avance(20)
	droite(90)
	avance(40)
	droiet(90)
	avance(20)
	droite(90)
	avance(20)
	gauche(90)
	avance(20)
	gauche(45)
	avance(20)
	droite(90)
	avance(20)
	gauche(90)
}
}
